# FINAL_FIOLET_ENGINE

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  FIOLET_SAFETY_STANDARD.md  HOW_TO_READ_THIS_REPO.md  INSTALL.md  KNOWN_FAILURE_MODES.md  LICENSE  README.md  SafetyKernel.cfg  SafetyKernel.tla  USAGE.md  fiolet_core.h  main_core.py  requirements.txt  test_bridge.py
.github-workflows/: ci.yml
.github/workflows/: ci.yml  fiolet-ci.yml  rust-ci.yml  rust.yml
demos/: demo.py
docs/: ABI_CONTRACT.md  F-STD-2026.md  RFC-0003-Extension-and-Compliance-Classification.md
dosc/: API.md
dosc/docs/: API.md
examples/: basic_usage.rs
experiments/: baseline_results.md  build_baseline.py  evaluate.py  test_dataset.json
fiolet-core/: Cargo.toml
fiolet-core/include/: abi_smoke_test.c  fiolet_core.h
fiolet-core/python/: pyproject.toml
fiolet-core/python/fiolet_engine/: __init__.py  conformance.py
fiolet-core/src/: kernel.rs  lib.rs  manifold.rs  safety.rs  tests.rs  types.rs
fiolet-core/src/engine/: mod.rs
fiolet-core/src/fiolet_conformance/: adapter.rs  mod.rs
fiolet-core/tests/: atomic_halt_irreversible.rs  fiolet_conformance_halt.rs
fiolet-host/: Cargo.toml
fiolet-host/src/: lib.rs
fiolet-python/: __init__.py  baseline.py  demo_kernel.py  fiolet_kernel.py  hooks.py  safety_checker.py  utils.py
fiolet_safety_kernel/src/: lib.rs
formal_specs/: FIOLET_Safety.tla  FioletSafetyKernel.tla  L17_ValueManifold.tla  liveness.tla
notebooks/: exploration.ipynb
proofs/: manifold_logic.tla  placeholder.txt
scripts/: quick_setup.bat  quick_setup.sh
src/: arithmetic.rs  lib.rs  value_manifold.rs
src/dashboard/: monitor.html
src/examples/: pytorch_integration.py
test/: adversarial_tests.rs  benchmark.rs  fiolet_conformance_halt.rs  integration_test.rs
tests/: adversarial_tests.rs
theory/: ANOG_PROTOCOL.md  MANIFOLD_PROJECTION.md
