[workspace]
members = [
    "fiolet-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Adrian Maliszewski <maliszewskiadrian01@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
homepage = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
documentation = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE/tree/main/docs"
readme = "README.md"
keywords = ["ai-safety", "alignment", "formal-verification", "rust"]
categories = ["algorithms", "science"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1

