[workspace]
members = [
    "fiolet-core",
]
resolver = "2"

# ==================================================
# WORKSPACE PACKAGE METADATA
# ==================================================

[workspace.package]
version = "0.1.0"
authors = ["Adrian Maliszewski <maliszewskiadrian01@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
homepage = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
documentation = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE/tree/main/docs"
readme = "README.md"
keywords = ["ai-safety", "alignment", "formal-verification", "rust"]
categories = ["algorithms", "science"]

# ==================================================
# PROFILES (CRITICAL FOR no_std)
# ==================================================
#
# These MUST live in the workspace root.
# They are REQUIRED to avoid panic unwinding.
#

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
panic = "abort"

[profile.bench]
panic = "abort"


