[workspace]
members = [
    "fiolet-core",
]
resolver = "2"

# ==================================================
# WORKSPACE PACKAGE METADATA
# ==================================================
#
# FINAL FIOLET ENGINE
#
# Experimental, research-focused AI safety system.
# This workspace hosts a pre-semantic safety kernel.
#
# Normative specifications:
# - SafetyKernel.tla (formal behavior)
# - fiolet_core.h   (C ABI contract)
#
# Rust code is an IMPLEMENTATION, not the source of truth.
#

[workspace.package]
version = "0.1.0"
authors = ["Adrian Maliszewski <maliszewskiadrian01@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
homepage = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
documentation = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE/tree/main/docs"
readme = "README.md"
keywords = ["ai-safety", "formal-verification", "rust", "systems"]
categories = ["algorithms", "science"]

# ==================================================
# PROFILES (CRITICAL FOR no_std SAFETY KERNEL)
# ==================================================
#
# These profiles MUST live in the workspace root.
# Subcrates MUST NOT override panic behavior.
#
# Rationale:
# - no_std environment
# - no unwinding allowed
# - panic MUST be fail-closed (abort)
#
# This is part of the SAFETY MODEL.
#

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
panic = "abort"

[profile.bench]
panic = "abort"
