[package]
name = "fiolet_core"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Maliszewski <maliszewskiadrian01@gmail.com>"]
description = "Deterministic pre-semantic safety kernel (ATOMIC HALT)"
license = "MIT"
repository = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
readme = "../README.md"

# ==================================================
# LIBRARY CONFIGURATION
# ==================================================

[lib]
name = "fiolet_core"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

# ==================================================
# FEATURES
# ==================================================

[features]
default = ["kernel"]
kernel = []
std = []

# ==================================================
# DEV DEPENDENCIES (STANDARD CONFORMANCE ONLY)
# ==================================================
# FIOLET AgeOfDarkness is an EXTERNAL STANDARD.
# We depend on the PACKAGE name.
# The Rust crate name exposed is `fiolet`.

[dev-dependencies]
fiolet-age-of-darkness = { git = "https://github.com/maliszewskiadrian/FIOLET-AgeOfDarkness", default-features = false }
