[package]
name = "fiolet_core"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Maliszewski <maliszewskiadrian01@gmail.com>"]
description = "Deterministic pre-semantic safety kernel (ATOMIC HALT)"
license = "MIT"
repository = "https://github.com/maliszewskiadrian/FINAL_FIOLET_ENGINE"
readme = "../README.md"

# ==================================================
# LIBRARY CONFIGURATION
# ==================================================

[lib]
name = "fiolet_core"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

# ==================================================
# FEATURES
# ==================================================
#
# kernel = pure no_std safety kernel
# std    = test / conformance only
#

[features]
default = ["kernel"]
kernel = []
std = []

# ==================================================
# DEV DEPENDENCIES (STANDARD CONFORMANCE ONLY)
# ==================================================
# FIOLET AgeOfDarkness — external standard
# Package name: fiolet-age-of-darkness
# Crate name exposed: fiolet
# Pinned to verified commit

[dev-dependencies]
fiolet-age-of-darkness = { 
    git = "https://github.com/maliszewskiadrian/FIOLET-AgeOfDarkness", 
    rev = "0e1ef1d539a07bb89fb76b5e3ef2cdbe5f10667b", 
    default-features = true 
}
