[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "fiolet-engine"
version = "0.1.0"
description = "Read-only conformance bindings for FINAL_FIOLET_ENGINE"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
